openshift/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: image-registry.openshift-image-registry.svc:5000/your-project/hello-world:latest
        ports:
        - containerPort: 8080
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - hello-world
      from:
        kind: ImageStreamTag
        name: 'hello-world:latest'
